[package]
name = "pidfrees"
version = "0.2.1"
edition = "2021"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
license = "GPL-2.0-or-later"
description = "A robust PID controller implementation for no_std environments, protected by GPL."
repository = "https://github.com/jorgeandrecastro/pidfrees" 
documentation = "https://docs.rs/pidfrees"
readme = "Readme.md"



[profile.release]
opt-level = 3    # Optimize for max speed
lto = true          # Link Time Optimization
codegen-units = 1   # Maximizes optimization at the expense of compilation time
panic = "abort"     # Removes heavy error messages in case of a crash
strip = true        # Removes all debug symbols (makes reverse engineering impossible)


[features]
# Par défaut, on ne change rien pour ne pas casser l'existant
default = [] 
f32 = [] # L'option magique pour le RP2350